--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-linechart": "^1.1.12",
     "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.11",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
